--- a/admin/index.html
+++ b/admin/index.html
@@ -26,7 +26,7 @@
         const OWNER = "duocifv";
         const REPO = "static-app";
         const PATH = "products.json";
-        let token = window.GH_TOKEN;
+        let token = localStorage.getItem("gh_token");
         let sha = "";
         let products = [];
 
