--- a/admin/token.html
+++ b/admin/token.html
@@ -14,7 +14,7 @@
         function saveToken() {
             const token = document.getElementById("tokenInput").value;
             if (token) {
-                localStorage.setItem("ghp_token", token);
+                localStorage.setItem("gh_token", token);
                 alert("Token đã được lưu!");
             } else {
                 alert("Vui lòng nhập token!");
